--- a/project/res/layout/fragment_tablet_checkout_trip_bucket_controller.xml
+++ b/project/res/layout/fragment_tablet_checkout_trip_bucket_controller.xml
@@ -7,60 +7,65 @@
     android:paddingTop="?android:attr/actionBarSize"
     android:orientation="horizontal" >
 
-    <ScrollView
-        android:id="@+id/trip_bucket_scroll"
+    <FrameLayout
+        android:id="@+id/trip_bucket_container"
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="1"
-        android:fillViewport="true">
+        android:background="@color/trip_bucket_background_color" >
 
-        <LinearLayout
-            android:id="@+id/trip_bucket_container"
+        <ScrollView
+            android:id="@+id/trip_bucket_scroll"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/trip_bucket_background_color"
-            android:orientation="vertical"
-            android:paddingBottom="@dimen/results_bucket_y_padding"
-            android:paddingLeft="24dp"
-            android:paddingRight="24dp"
-            android:paddingTop="@dimen/results_bucket_y_padding">
+            android:fillViewport="true">
 
-            <FrameLayout
-                android:id="@+id/trip_bucket_header_container"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:paddingBottom="@dimen/results_bucket_header_padding">
+                android:orientation="vertical"
+                android:paddingBottom="@dimen/results_bucket_y_padding"
+                android:paddingLeft="24dp"
+                android:paddingRight="24dp"
+                android:paddingTop="@dimen/results_bucket_y_padding">
 
-                <TextView
-                    android:id="@+id/your_trip_tv"
-                    android:layout_width="wrap_content"
+                <FrameLayout
+                    android:id="@+id/trip_bucket_header_container"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="left"
-                    android:text="@string/your_trip"
-                    android:textSize="18dp"/>
+                    android:paddingBottom="@dimen/results_bucket_header_padding">
 
-                <TextView
-                    android:id="@+id/trip_date_range"
-                    android:layout_width="wrap_content"
+                    <TextView
+                        android:id="@+id/your_trip_tv"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="left"
+                        android:text="@string/your_trip"
+                        android:textSize="18dp"/>
+
+                    <TextView
+                        android:id="@+id/trip_date_range"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="right"
+                        android:textSize="18dp"/>
+                </FrameLayout>
+
+                <FrameLayout
+                    android:id="@+id/bucket_flight_frag_container"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+
+                <FrameLayout
+                    android:id="@+id/bucket_hotel_frag_container"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="right"
-                    android:textSize="18dp"/>
-            </FrameLayout>
+                    android:paddingTop="@dimen/results_bucket_item_padding"/>
+            </LinearLayout>
+        </ScrollView>
+    </FrameLayout>
 
-            <FrameLayout
-                android:id="@+id/bucket_flight_frag_container"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-
-            <FrameLayout
-                android:id="@+id/bucket_hotel_frag_container"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:paddingTop="@dimen/results_bucket_item_padding"/>
-        </LinearLayout>
-    </ScrollView>
-
-    <View
+    <Space
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="2" />
