--- a/project/res/layout/fragment_tablet_horizontal_trip_bucket_item.xml
+++ b/project/res/layout/fragment_tablet_horizontal_trip_bucket_item.xml
@@ -33,68 +33,55 @@
 
     <!-- Price change -->
 
-    <LinearLayout
+    <FrameLayout
+        android:id="@+id/trip_bucket_item_price_change_clip_container"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal" >
+        android:layout_height="wrap_content" >
 
-        <Space
-            android:layout_width="276dp"
-            android:layout_height="wrap_content" />
-
-        <FrameLayout
-            android:id="@+id/trip_bucket_item_price_change_clip_container"
-            android:layout_width="0dp"
+        <LinearLayout
+            android:id="@+id/price_change_notification_container"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1" >
+            android:layout_gravity="right"
+            android:orientation="vertical">
+
+            <ImageView
+                android:id="@+id/little_up_arrow"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="30dp"
+                android:layout_gravity="right"
+                android:adjustViewBounds="true"
+                android:src="@drawable/bg_price_alert_arrow"/>
+
+            <View
+                android:id="@+id/grey_bar"
+                android:layout_width="match_parent"
+                android:layout_height="5dp"
+                android:background="#BFBFBF"/>
 
             <LinearLayout
-                android:id="@+id/price_change_notification_container"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="right"
-                android:orientation="vertical">
+                android:background="@android:color/white"
+                android:gravity="center"
+                android:orientation="horizontal"
+                android:padding="10dp">
 
                 <ImageView
-                    android:id="@+id/little_up_arrow"
+                    android:id="@+id/exclaimation"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginRight="30dp"
-                    android:layout_gravity="right"
+                    android:layout_marginRight="10dp"
                     android:adjustViewBounds="true"
-                    android:src="@drawable/bg_price_alert_arrow"/>
+                    android:src="@drawable/ic_price_alert_exclamation"/>
 
-                <View
-                    android:id="@+id/grey_bar"
-                    android:layout_width="match_parent"
-                    android:layout_height="5dp"
-                    android:background="#BFBFBF"/>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:background="@android:color/white"
-                    android:gravity="center"
-                    android:orientation="horizontal"
-                    android:padding="10dp">
-
-                    <ImageView
-                        android:id="@+id/exclaimation"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginRight="10dp"
-                        android:adjustViewBounds="true"
-                        android:src="@drawable/ic_price_alert_exclamation"/>
-
-                    <TextView
-                        android:id="@+id/price_change_notification_text"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"/>
-                </LinearLayout>
+                <TextView
+                    android:id="@+id/price_change_notification_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"/>
             </LinearLayout>
-
-        </FrameLayout>
-
-    </LinearLayout>
+        </LinearLayout>
+    </FrameLayout>
 
 </LinearLayout>
