2946: Launch search box less wide on 10" portrait

--- a/project/res/values-sw800dp-land/dimens.xml
+++ b/project/res/values-sw800dp-land/dimens.xml
@@ -8,4 +8,7 @@
 
     <dimen name="hotel_checkout_overview_image_height">320dp</dimen>
 
+    <!-- Tablet Launch Screen -->
+    <dimen name="tablet_search_width">768dp</dimen>
+
 </resources>
