--- a/project/res/layout/activity_tablet_results.xml
+++ b/project/res/layout/activity_tablet_results.xml
@@ -12,6 +12,12 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
+    <View
+        android:id="@+id/search_bottom_gradient"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/bg_tablet_search_bottom_gradient"/>
+
     <!-- CONTROLLER CONTAINERS -->
 
     <com.expedia.bookings.widget.FrameLayoutTouchController
