--- a/project/res/layout/fragment_tablet_results_search.xml
+++ b/project/res/layout/fragment_tablet_results_search.xml
@@ -124,7 +124,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content">
 
-                            <EditText
+                            <TextView
                                 android:id="@+id/popup_start_date"
                                 style="@style/V2.Widget.TextView.TabletSearch.PopupFakeEditText"
                                 android:hint="@string/select_dates"/>
@@ -158,7 +158,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content">
 
-                            <EditText
+                            <TextView
                                 android:id="@+id/popup_end_date"
                                 style="@style/V2.Widget.TextView.TabletSearch.PopupFakeEditText"
                                 android:hint="@string/trip_end_optional" />
