--- a/project/res/layout/fragment_tablet_checkout_forms.xml
+++ b/project/res/layout/fragment_tablet_checkout_forms.xml
@@ -29,6 +29,7 @@
                     android:id="@+id/horizontal_trip_bucket_item"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginBottom="@dimen/tablet_checkout_form_padding_x"
                     android:layout_marginTop="@dimen/tablet_checkout_form_padding_x"
                     android:paddingLeft="@dimen/tablet_checkout_form_padding_x"
                     android:paddingRight="@dimen/tablet_checkout_form_padding_x"
