--- a/project/res/values-sw600dp/dimens.xml
+++ b/project/res/values-sw600dp/dimens.xml
@@ -180,6 +180,10 @@
     <dimen name="stored_credit_card_button_padding">10dp</dimen>
     <dimen name="tablet_checkout_trip_bucket_expanded_item_height">0dp</dimen>
     <dimen name="tablet_checkout_trip_bucket_header_height">0dp</dimen>
+    <dimen name="tablet_checkout_trip_bucket_expanded_image_width">216dp</dimen>
+    <dimen name="tablet_checkout_trip_bucket_expanded_padding_x">12dp</dimen>
+    <dimen name="tablet_checkout_trip_bucket_expanded_padding_major_y">16dp</dimen>
+    <dimen name="tablet_checkout_trip_bucket_expanded_padding_minor_y">10dp</dimen>
 
     <!-- CVV Screen -->
     <dimen name="cvv_keypad_text_size">30sp</dimen>
