--- a/project/res/values-sw800dp/dimens.xml
+++ b/project/res/values-sw800dp/dimens.xml
@@ -96,6 +96,10 @@
     <dimen name="tablet_checkout_payment_button_image_vertical_margin">0dp</dimen>
     <dimen name="tablet_checkout_payment_button_new_cc_left_margin">5dp</dimen>
     <dimen name="stored_credit_card_button_padding">10dp</dimen>
+    <dimen name="tablet_checkout_trip_bucket_expanded_image_width">276dp</dimen>
+    <dimen name="tablet_checkout_trip_bucket_expanded_padding_x">18dp</dimen>
+    <dimen name="tablet_checkout_trip_bucket_expanded_padding_major_y">24dp</dimen>
+    <dimen name="tablet_checkout_trip_bucket_expanded_padding_minor_y">16dp</dimen>
 
     <!-- Confirmation Fragment -->
     <dimen name="confirmation_width">605dp</dimen>
