3026 show sold out in hotel list row
This will really only come up with search by hotel (or if you go
to details and kick off the availability call and the row grab's
a new view for itself).

--- a/project/res/layout-sw600dp/section_hotel_summary_tablet.xml
+++ b/project/res/layout-sw600dp/section_hotel_summary_tablet.xml
@@ -101,6 +101,20 @@
                     android:singleLine="true"
                     android:textColor="#ffffff"
                     android:textSize="@dimen/tablet_result_row_secondary_text_size"/>
+
+                <TextView
+                    android:id="@+id/sold_out_text_view"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:ellipsize="end"
+                    android:includeFontPadding="false"
+                    android:paddingLeft="2dp"
+                    android:singleLine="true"
+                    android:text="@string/sold_out_on_expedia"
+                    android:textColor="#ffffff"
+                    android:textSize="@dimen/tablet_result_row_secondary_text_size"
+                    android:visibility="gone"/>
+
             </LinearLayout>
         </LinearLayout>
 
