--- a/project/res/layout/fragment_tablet_launch.xml
+++ b/project/res/layout/fragment_tablet_launch.xml
@@ -1,4 +1,6 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/root_container"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -6,14 +8,14 @@
     <FrameLayout
         android:id="@+id/map_container"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"/>
 
     <View
         android:id="@+id/action_bar_background"
         android:layout_width="match_parent"
         android:layout_height="?android:actionBarSize"
         android:layout_gravity="top"
-        android:background="@drawable/bg_tablet_launch_ab_gradient" />
+        android:background="@drawable/bg_tablet_launch_ab_gradient"/>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -41,7 +43,7 @@
                 android:drawableLeft="@drawable/ic_searchbox"
                 android:drawablePadding="8dp"
                 android:singleLine="true"
-                android:textSize="18dp" />
+                android:textSize="18dp"/>
         </LinearLayout>
 
         <FrameLayout
@@ -55,7 +57,7 @@
         android:id="@+id/waypoint_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:visibility="invisible" />
+        android:visibility="invisible"/>
 
     <com.expedia.bookings.widget.FrameLayoutTouchController
         android:id="@+id/pin_detail_container"
@@ -63,5 +65,59 @@
         android:layout_height="match_parent"
         android:visibility="invisible"
         android:background="#b2070f24"/>
+
+    <FrameLayout
+        android:id="@+id/no_connectivity_container"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="visible"
+        android:background="#070f24">
+
+        <com.larvalabs.svgandroid.widget.SVGView
+            android:id="@+id/globe_background"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="-40dp"
+            android:alpha=".1"
+            app:zoomMode="fitWidth"
+            app:src="@raw/map_tablet_launch"/>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="40dp"
+            android:layout_gravity="center"
+            android:orientation="vertical">
+
+            <com.larvalabs.svgandroid.widget.SVGView
+                android:layout_width="96dp"
+                android:layout_height="72dp"
+                android:layout_gravity="center_horizontal"
+                app:zoomMode="fitDocument"
+                app:src="@raw/ic_no_connection"/>
+
+            <com.expedia.bookings.widget.TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="22dp"
+                android:gravity="center_horizontal"
+                android:text="@string/network_unavailable"
+                android:textSize="22sp"
+                android:textColor="#ffffff"
+                app:textStyle="medium"/>
+
+            <com.expedia.bookings.widget.TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="9dp"
+                android:gravity="center_horizontal"
+                android:text="@string/error_network_unavailable"
+                android:textSize="16sp"
+                android:textColor="#ffffff"
+                app:textStyle="light"/>
+        </LinearLayout>
+    </FrameLayout>
 
 </FrameLayout>
