--- a/project/res/layout-port/fragment_tablet_checkout_trip_bucket_controller.xml
+++ b/project/res/layout-port/fragment_tablet_checkout_trip_bucket_controller.xml
@@ -97,10 +97,10 @@
                 android:orientation="horizontal" >
 
                 <FrameLayout
+                    android:id="@+id/bucket_flight_frag_container_container"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:layout_marginRight="12dp" >
+                    android:layout_weight="1" >
                     <FrameLayout
                         android:id="@+id/bucket_flight_frag_container"
                         android:layout_width="match_parent"
@@ -108,17 +108,33 @@
                         android:layout_marginTop="16dp" />
                 </FrameLayout>
 
+                <Space
+                    android:id="@+id/flight_spacer"
+                    android:layout_width="24dp"
+                    android:layout_height="wrap_content" />
+
                 <FrameLayout
+                    android:id="@+id/bucket_hotel_frag_container_container"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:layout_marginLeft="12dp" >
+                    android:layout_weight="1" >
                     <FrameLayout
                         android:id="@+id/bucket_hotel_frag_container"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="16dp" />
                 </FrameLayout>
+
+                <Space
+                    android:id="@+id/hotel_spacer"
+                    android:layout_width="24dp"
+                    android:layout_height="wrap_content" />
+
+                <Space
+                    android:id="@+id/dummy_spacer"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1" />
 
             </LinearLayout>
         </LinearLayout>
