--- a/project/res/values/donottranslate.xml
+++ b/project/res/values/donottranslate.xml
@@ -91,6 +91,7 @@
     <string name="preference_force_google_wallet_error">preference_force_google_wallet_error</string>
     <string name="preference_force_custom_server_http_only">preference_force_custom_server_http_only</string>
     <string name="preference_should_start_hierarchy_server">preference_should_start_hierarchy_server</string>
+    <string name="preference_force_passenger_category_error">preference_force_passenger_category_error</string>
 
     <!-- Setting keys -->
     <string name="setting_hide_hotel_attach">setting_hide_hotel_attach</string>
