Address concern: LoginActivity wonky compat code
We can just refer to the attr in the layout. The overlay mode is not
necessary at this point due to the way background images are fetched
(using strictly the screen size and not the layout size), but this is
all I am willing to refactor right now.

--- a/project/res/layout/activity_login.xml
+++ b/project/res/layout/activity_login.xml
@@ -31,6 +31,7 @@
     <FrameLayout
         android:id="@+id/login_fragment_container"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:paddingTop="?android:attr/actionBarSize"/>
 
 </FrameLayout>
