--- a/project/res/layout/snippet_tablet_hotel_gallery_item.xml
+++ b/project/res/layout/snippet_tablet_hotel_gallery_item.xml
@@ -5,8 +5,8 @@
 
     <ImageView
         android:id="@+id/image"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:scaleType="centerCrop" />
 
