--- a/project/res/layout/fragment_results_waypoint_search.xml
+++ b/project/res/layout/fragment_results_waypoint_search.xml
@@ -3,13 +3,11 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-
     <com.expedia.bookings.widget.FrameLayoutTouchController
         android:id="@+id/bg"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#ff11182c" />
-
+        android:background="@color/launch_pin_detail_background" />
 
     <LinearLayout
         android:id="@+id/search_bar_container"
