--- a/project/res/layout/fragment_results_waypoint_search.xml
+++ b/project/res/layout/fragment_results_waypoint_search.xml
@@ -30,7 +30,7 @@
             <LinearLayout
                 android:layout_width="0dp"
                 android:layout_height="@dimen/tablet_search_header_height"
-                android:background="@drawable/bg_tablet_search_header"
+                android:background="@drawable/bg_search_box"
                 android:orientation="horizontal"
                 android:gravity="center_vertical"
                 android:layout_weight="1">
@@ -50,7 +50,7 @@
                     android:inputType="textNoSuggestions"
                     android:imeOptions="actionSearch"
                     android:singleLine="true"
-                    android:textSize="18dp" />
+                    android:textSize="18sp" />
 
                 <ImageView
                     android:id="@+id/clear_waypoint_text"
