--- a/project/res/layout/fragment_tablet_launch.xml
+++ b/project/res/layout/fragment_tablet_launch.xml
@@ -29,11 +29,11 @@
             android:id="@+id/fake_search_bar_container"
             android:layout_width="@dimen/tablet_search_width"
             android:layout_height="@dimen/tablet_search_header_height"
-            android:background="@drawable/bg_tablet_search_header"
+            android:background="@drawable/bg_search_box"
             android:gravity="center_vertical"
             android:orientation="horizontal">
 
-            <TextView
+            <com.expedia.bookings.widget.TextView
                 android:id="@+id/fake_waypoint_edit_text"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -43,7 +43,8 @@
                 android:drawableLeft="@drawable/ic_searchbox"
                 android:drawablePadding="8dp"
                 android:singleLine="true"
-                android:textSize="18dp"/>
+                android:textSize="18sp"
+                app:textStyle="light"/>
         </LinearLayout>
 
         <FrameLayout
