--- a/project/res/layout/section_flight_leg_tablet_blue_card_checked.xml
+++ b/project/res/layout/section_flight_leg_tablet_blue_card_checked.xml
@@ -14,9 +14,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_marginBottom="12dp"
-        android:layout_marginLeft="12dp"
-        android:layout_marginRight="12dp"
+        android:layout_marginBottom="@dimen/hotel_flight_card_content_margin_y"
+        android:layout_marginLeft="@dimen/hotel_flight_card_content_margin_x"
+        android:layout_marginRight="@dimen/hotel_flight_card_content_margin_x"
         android:orientation="horizontal">
 
         <LinearLayout
@@ -81,8 +81,8 @@
             android:id="@+id/flight_trip_view"
             android:layout_width="match_parent"
             android:layout_height="30dp"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
+            android:layout_marginLeft="@dimen/hotel_flight_card_content_margin_x"
+            android:layout_marginRight="@dimen/hotel_flight_card_content_margin_x"
             android:layout_gravity="center"
             app:flightLineColor="#ffffff"
             app:waypointTextColor="@color/tablet_flight_trip_view_airport_text_color"
