3092 hotel cells polish - better center prices
This is mostly for the case where there is just one price showing (not the
strikethrough text). I've also attempted to make the centering look good when
the strikethrough text is present.

--- a/project/res/layout-sw600dp/section_hotel_summary_tablet.xml
+++ b/project/res/layout-sw600dp/section_hotel_summary_tablet.xml
@@ -128,6 +128,7 @@
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
             android:orientation="vertical">
 
             <TextView
@@ -135,7 +136,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="right"
-                android:includeFontPadding="false"
+                android:layout_marginTop="2dp"
                 android:textColor="#ffffff"
                 android:textSize="@dimen/hotel_row_strikethrough_price_text_size"
                 android:visibility="gone"/>
@@ -144,7 +145,6 @@
                 android:id="@+id/price_text_view"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
                 android:includeFontPadding="false"
                 android:textColor="#ffffff"
                 android:textSize="@dimen/tablet_result_row_price_size"
