--- a/project/res/layout/widget_centered_captioned_icon.xml
+++ b/project/res/layout/widget_centered_captioned_icon.xml
@@ -1,28 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
-<merge
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<merge xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
+
+    <View
+        android:id="@+id/center_view"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_centerInParent="true"/>
 
     <com.larvalabs.svgandroid.widget.SVGView
         android:id="@+id/svg"
         android:layout_width="@dimen/centered_captioned_icon_svg_width"
         android:layout_height="@dimen/centered_captioned_icon_svg_height"
-        android:layout_centerInParent="true"
+        android:layout_above="@id/center_view"
+        android:layout_centerHorizontal="true"
         android:alpha="0.5"
         app:zoomMode="fitDocument" />
 
     <com.expedia.bookings.widget.TextView
         android:id="@+id/caption"
-        android:layout_height="wrap_content"
         android:layout_width="wrap_content"
-        android:layout_below="@id/svg"
+        android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_alignParentRight="true"
+        android:layout_below="@id/center_view"
         android:layout_marginLeft="36dp"
         android:layout_marginRight="36dp"
         android:gravity="center_horizontal"
         android:textColor="#a5180e0d"
         android:textSize="18sp"
         app:textStyle="condensed" />
+
+    <com.expedia.bookings.widget.TextView
+        android:id="@+id/action_button"
+        android:layout_width="182dp"
+        android:layout_height="32dp"
+        android:layout_below="@id/caption"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="@dimen/pick_airport_button_top_margin"
+        android:background="#3d6a99"
+        android:gravity="center"
+        android:textColor="@android:color/white"
+        android:textSize="14sp"
+        android:visibility="gone"
+        app:textStyle="medium" />
 
 </merge>
