--- a/project/res/values-sw600dp/dimens.xml
+++ b/project/res/values-sw600dp/dimens.xml
@@ -203,4 +203,7 @@
     <dimen name="confirmation_button_bar_height">48dp</dimen>
     <dimen name="confirmation_custom_action_textsize">13sp</dimen>
 
+    <!-- Select Airport button top margin (used when no origin is set) -->
+    <dimen name="pick_airport_button_top_margin">10dp</dimen>
+
 </resources>
