--- a/project/res/layout/widget_centered_captioned_icon.xml
+++ b/project/res/layout/widget_centered_captioned_icon.xml
@@ -6,7 +6,7 @@
         android:id="@+id/center_view"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_centerInParent="true"/>
+        android:layout_centerInParent="true" />
 
     <com.larvalabs.svgandroid.widget.SVGView
         android:id="@+id/svg"
@@ -38,7 +38,7 @@
         android:layout_below="@id/caption"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="@dimen/pick_airport_button_top_margin"
-        android:background="#3d6a99"
+        android:background="@drawable/bg_tablet_search_result_error_action_button"
         android:gravity="center"
         android:textColor="@android:color/white"
         android:textSize="14sp"
