Remove a few unused resources
And move some tvly/vsc specific ones into the respective places

--- a/project/res/layout/fragment_hotel_list.xml
+++ b/project/res/layout/fragment_hotel_list.xml
@@ -28,12 +28,8 @@
             android:text="@string/no_filter_results"
             android:textColor="#FF666666"
             android:textSize="18sp"
-            android:textStyle="bold"
-            android:visibility="gone" />
+            android:textStyle="bold" />
 
-        <include
-            android:id="@+id/placeholder_container"
-            layout="@layout/include_placeholder_progress" />
     </LinearLayout>
 
 </FrameLayout>
