--- a/project/res/values-port/tablet_themes.xml
+++ b/project/res/values-port/tablet_themes.xml
@@ -11,7 +11,7 @@
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">0dp</item>
         <item name="android:layout_weight">1</item>
-        <item name="android:textSize">22dp</item>
+        <item name="android:textSize">@dimen/search_params_destination_text_size</item>
         <item name="minTextSize">14dp</item>
         <item name="android:textColor">#FFFFFF</item>
         <item name="android:gravity">center_vertical</item>
@@ -22,6 +22,7 @@
         <item name="android:singleLine">true</item>
         <item name="android:drawableLeft">@drawable/ic_action_bar_magnifying_glass</item>
         <item name="android:background">?android:attr/selectableItemBackground</item>
+        <item name="textStyle">light</item>
     </style>
 
     <style name="V2.Widget.LinearLayout.TabletSearchRightButtonsContainer">
