--- a/project/res/values-sw600dp/dimens.xml
+++ b/project/res/values-sw600dp/dimens.xml
@@ -56,6 +56,10 @@
     <dimen name="results_bottom_gradient_offset">32dp</dimen>
     <!-- note: results_column_header_height should be equal to results_list_spacer_height + results_list_margin_top -->
     <dimen name="results_column_header_height">48dp</dimen>
+    <!-- Text size for destination label - search screen, left container element -->
+    <dimen name="search_params_destination_text_size">19sp</dimen>
+    <!-- Text size for search param labels - search screen, right container elements -->
+    <dimen name="search_params_right_container_text_size">15sp</dimen>
 
     <!-- GridManager numbers for Search Results screen -->
     <fraction name="results_grid_bottom_half">54%</fraction>
