--- a/project/res/values/tablet_themes.xml
+++ b/project/res/values/tablet_themes.xml
@@ -188,11 +188,11 @@
     <style name="V2.Widget.TextView.TabletSearchDestination">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">match_parent</item>
-        <item name="android:textSize">22dp</item>
+        <item name="android:textSize">@dimen/search_params_destination_text_size</item>
         <item name="minTextSize">14dp</item>
         <item name="android:textColor">#FFFFFF</item>
         <item name="android:gravity">center_vertical</item>
-        <item name="android:paddingLeft">16dp</item>
+        <item name="android:paddingLeft">32dp</item>
         <item name="android:paddingRight">16dp</item>
         <item name="android:drawablePadding">8dp</item>
         <item name="android:layout_gravity">center_vertical|left</item>
@@ -200,6 +200,7 @@
         <item name="android:singleLine">true</item>
         <item name="android:drawableLeft">@drawable/ic_action_bar_magnifying_glass</item>
         <item name="android:background">?android:attr/selectableItemBackground</item>
+        <item name="textStyle">light</item>
     </style>
 
     <style name="V2.Widget.TextView.TabletSearch" />
@@ -299,6 +300,17 @@
         <item name="android:drawablePadding">@dimen/tablet_flight_details_statistic_drawable_spacing</item>
         <item name="android:textSize">18sp</item>
         <item name="android:textColor">#4c4c4c</item>
+        <item name="textStyle">light</item>
+    </style>
+
+    <style name="V2.Widget.TextView.SearchParams">
+        <item name="android:textSize">@dimen/search_params_right_container_text_size</item>
+        <item name="android:textColor">#FFFFFF</item>
+        <item name="android:paddingLeft">16dp</item>
+        <item name="android:paddingRight">16dp</item>
+        <item name="android:drawablePadding">8dp</item>
+        <item name="android:background">?android:attr/selectableItemBackground</item>
+        <item name="android:gravity">center_vertical</item>
         <item name="textStyle">light</item>
     </style>
 
