--- a/project/res/layout-sw600dp/section_hotel_summary_tablet.xml
+++ b/project/res/layout-sw600dp/section_hotel_summary_tablet.xml
@@ -55,6 +55,9 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:layout_marginLeft="@dimen/tablet_result_twoLine_left_margin"
+            android:layout_marginRight="@dimen/tablet_result_twoLine_right_margin"
+            android:layout_marginBottom="@dimen/tablet_result_twoLine_bottom_margin"
             android:orientation="vertical">
 
             <com.expedia.bookings.widget.TextView
@@ -71,7 +74,7 @@
                 android:id="@+id/rating_proximity_container"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="2dp">
+                android:layout_marginTop="4dp">
 
                 <com.expedia.bookings.widget.TextView
                     android:id="@+id/not_rated_text_view"
@@ -102,7 +105,7 @@
                     android:layout_height="wrap_content"
                     android:ellipsize="end"
                     android:includeFontPadding="false"
-                    android:paddingLeft="4dp"
+                    android:paddingLeft="6dp"
                     android:singleLine="true"
                     android:textColor="#ffffff"
                     android:textSize="@dimen/tablet_result_row_secondary_text_size"
@@ -148,6 +151,7 @@
                 android:includeFontPadding="false"
                 android:textColor="#ffffff"
                 android:textSize="@dimen/tablet_result_row_price_size"
+                android:paddingTop="@dimen/tablet_result_price_text_bottom_margin"
                 app:textStyle="medium" />
         </LinearLayout>
     </LinearLayout>
