--- a/project/res/values-sw800dp/dimens.xml
+++ b/project/res/values-sw800dp/dimens.xml
@@ -29,6 +29,10 @@
     <!-- Search Results -->
     <dimen name="tablet_result_row_primary_text_size">16sp</dimen>
     <dimen name="tablet_result_row_price_size">21sp</dimen>
+    <dimen name="tablet_result_twoLine_left_margin">5dp</dimen>
+    <dimen name="tablet_result_twoLine_bottom_margin">6dp</dimen>
+    <dimen name="tablet_result_twoLine_right_margin">5dp</dimen>
+    <dimen name="tablet_result_price_text_bottom_margin">5dp</dimen>
     <!-- Text size for destination label - search screen, left container element -->
     <dimen name="search_params_destination_text_size">25sp</dimen>
     <!-- Text size for search param labels - search screen, right container elements -->
