--- a/project/res/values/styles.xml
+++ b/project/res/values/styles.xml
@@ -252,6 +252,8 @@
 
     <style name="RatingBar.UserReview.White">
         <item name="android:progressDrawable">@drawable/ratingbar_userreview_white</item>
+        <item name="android:minHeight">9dp</item>
+        <item name="android:maxHeight">9dp</item>
     </style>
 
     <style name="Widget.EditText" parent="@android:style/Widget.EditText">
